# auth-api

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.grpc  README.md  auth.rs  build.rs  docker-compose.yaml
docs/: documentation.html  documentation.org
proto/: auth.proto
python_helpers/: auth_pb2.py  auth_pb2_grpc.py  benchmark.py  helper.py
resources/: resources.json
src/: \  grpc_server.rs  main.rs  state.rs
src/actors/: mod.rs
src/actors/cache/: mod.rs
src/actors/cache/tokens/: mod.rs
src/actors/database/: mod.rs
src/actors/database/resources/: mod.rs
src/actors/database/users/: mod.rs
src/api_handlers/auth/: mod.rs  refresh.rs  schema.rs  sign_in.rs  sign_out.rs  sign_up.rs
src/api_handlers/auth/models/: users.rs
src/api_handlers/users/: create.rs  delete.rs  delete_acc.rs  get_many.rs  get_my_acc.rs  get_one.rs  mod.rs  schema.rs  update.rs  update_acc.rs
src/api_handlers/users/models/: users.rs
src/bootstrap_utils/: add_resources.rs  mod.rs  setup_logger.rs
src/cache_schemas/: tokens.rs
src/db_schemas/: mod.rs  resources.rs  users.rs
src/grpc/: mod.rs
src/grpc/auth_impl/: mod.rs
src/middlewares/: mod.rs
src/middlewares/rbac/: mod.rs
src/utils/: mod.rs  passwords.rs  tokens.rs  validations.rs
