[package]
name = "auth-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.2.1"
bson = {version = "2.2.0", features = ["chrono-0_4"]}
actix = "0.13.0"
actix-rt = "2.6.0"
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.9.0"
futures-util = "0.3.21"
ipnetwork = "0.18"
jsonschema = "0.15.0"
jsonwebtoken = "8.0.1"
pwhash = "1"
r2d2 = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
redis = { version = "0.21.5", features = ["tokio-comp", "connection-manager"] }
actix-web-httpauth = "0.6.0"
